--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="/Users/aaldekoaben/Documents/Deusto/Programación/Programación III/Recopilación de JAR/jcalendar-1/lib/jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="/Users/aaldekoaben/Documents/Deusto/Programación/Programación III/Recopilación de JAR/jcalendar-1/lib/jgoodies-common-1.2.0.jar"/>
+	<classpathentry kind="lib" path="/Users/aaldekoaben/Documents/Deusto/Programación/Programación III/Recopilación de JAR/jcalendar-1/lib/jgoodies-looks-2.4.1.jar"/>
+	<classpathentry kind="lib" path="/Users/aaldekoaben/Documents/Deusto/Programación/Programación III/Recopilación de JAR/jcalendar-1/lib/junit-4.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
