MEJORAS HECHAS Y COMPLETAS

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/Ventanas/VentanaCharlas.java=UTF-8
+encoding//src/Ventanas/VentanaClases.java=UTF-8
+encoding//src/Ventanas/VentanaInstruccionesRutina.java=UTF-8
 encoding//src/Ventanas/VentanaRutina.java=UTF-8
